src/components/Global/ContentContainer/ContentContainer.module.css
.trade_route {
    background: transparent;
    margin-top: 0;
    border-radius: var(--border-radius);
}

.swap_route {
    border: 0.5px solid var(--accent-accent1, #7371fc);
    border-radius: var(--border-radius);
    box-shadow: var(--swap-box-shadow);
    box-shadow: inset 0px 0px 20px 0px rgba(115, 113, 252, 0.25);
}

.container {
    width: 100%;
}

.main_content {
    background-color: transparent;
    border-radius: var(--border-radius);

    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.swap_route .main_content{
    background: var(--dark1)
}

.swap_bg {
    background: var(--dark1);
    
}




.main_content:hover,
.main_content:focus-within {
    transition: var(--transition);
}

@media (max-width: 768px) {
    .trade_route {
        /* max-width: 500px; */
        width: 100%;
    }
}

@media (min-width: 768px) {
    .swap_route {
       width: 440px;
    }

    .main_content {
        padding: 8px 16px 16px 16px;
        gap: 8px;
    }
}

